@@ -8,6 +8,7 @@
    * Added pilot.weapsetAddType and pilot.weapsetSetActive
    * Gave unicorp storm launchers a rarity of 2 and made it more available
    * `test_of_renewal`: fixed weapon set defaults being incorrect and increased enemy damage
+   * `seek_n_destroy`: missions should work properly when boarding the target
    * Fixed many typos
    * flf_diversion, flf_rogue: Missions should no longer be able to have ridiculously low credit rewards
 
